--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
+baseurl: /xgh
 title: eXtreme Go Horse (XGH) Process
 description: There's nothing else to say about it.
 google_analytics: UA-173532822-2
