Fix analytics id

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-cayman
 baseurl: /xgh
 title: eXtreme Go Horse (XGH) Process
 description: There's nothing else to say about it.
-google_analytics: UA-173532822-2
+google_analytics: G-4K57ZB5WJP
